--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     
     <!-- home -->
     <div class="section" id="home" data-stellar-background-ratio="0.5">
+         <div class="overlay"></div>
         <div class="container">
             <div class="disply-table"  >
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
