--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     <!-- ./header -->
     
     <!-- home -->
-    <div class="section" id="home" data-stellar-background-ratio="0.5">
-         <div class="overlay"></div>
-        <div class="container">
+    <div class="section" id="home" data-stellar-background-ratio="0.5" >
+        <div class="overlay"></div>
+        <div class="container container-sm container-md container-lg container-xl">
             <div class="disply-table"  >
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
                     <h1><STRong> MANOJ <br> MARMAT</STRong></h1>
@@ -126,6 +126,7 @@
     </div>
     <!-- ./experience -->
     <!-- Blog  -->
+    
 <div class="section" id="Blog">
     <div class="container">
         <div class="col-md-12" align="center">
@@ -280,9 +281,9 @@
                     <div id="success">
                         <p class="green textcenter"> Your message was sent successfully! I will be in touch as soon as I can. </p>
                     </div>
-                    <div id="error">
+                    <!-- <div id="error">
                         <p> Something went wrong, try refreshing and submitting the form again. </p>
-                    </div>
+                    </div> -->
                 </form>
             </div>
         </div>
