--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <![endif]-->
 </head>
 
-<body>
+<body class="overlay">
 
     <!-- Preloader -->
     <div id="preloader">
@@ -51,7 +51,7 @@
     
     <!-- home -->
     <div class="section" id="home" data-stellar-background-ratio="0.5" >
-        <div class="overlay"></div>
+       
         <div class="container container-sm container-md container-lg container-xl">
             <div class="disply-table"  >
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
