--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <div class="disply-table">
                 
                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0">
-<div class="overlay">  <div>                   
-                    <h1><STRong> MANOJ <br> MARMAT</STRong></h1>
+                  
+                    <h1> <div class="overlay">  <div> <STRong> MANOJ <br> MARMAT</STRong></h1>
                     <h4>Full Stack Developer <br /></h4> </div>
             </div>
         </div>
