--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 <!--                 <div class="table-cell" data-aos="fade-up" data-aos-delay="0"> -->
                   
 <!--                     <h1><STRong> MANOJ <br> MARMAT</STRong></h1>
-                    <h4>Full Stack Developer <br /></h4> </div>
-            </div> -->
+                    <h4>Full Stack Developer <br /></h4>--> </div>
+            </div> 
         </div>
     </div>
         
