--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <!-- header -->
     <header class="navbar-fixed-top">
         <nav>
+            <div class="overlay">  
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
@@ -45,7 +46,8 @@
                 <li><a href="#projects">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-        </nav>
+        <div>
+                </nav>
     </header>
     <!-- ./header -->
     
