--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <!-- header -->
     <header class="navbar-fixed-top">
         <nav>
-            <div class="overlay">  
+            <div class="overlay">  <div>
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
@@ -46,7 +46,7 @@
                 <li><a href="#projects">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
-        <div>
+        
                 </nav>
     </header>
     <!-- ./header -->
